
        CHANGES IN spatstat.explore VERSION 3.2-5.010

OVERVIEW

    o We thank Marcelino de la Cruz for contributions.
    
    o Spatially weighted median and quantile of mark values.
    
    o Adaptive estimation of intensity for split point patterns.

    o Internal improvements.
    
    o Bug fixes.

NEW FUNCTIONS

    o SpatialMedian.ppp, SpatialQuantile.ppp
    Spatially weighted median and quantile of mark values of a point pattern.
    
    o densityAdaptiveKernel.splitppp
    A method for 'densityAdaptiveKernel' for split point patterns.
    
BUG FIXES

    o studpermu.test
    The code required each group to consist of at least 3 point patterns,
    rather than 2 point patterns (as stated in the documentation).
    Fixed.

    o Jest
    Ignored pixel resolution argument 'eps'.
    Fixed.

    o scanLRTS
    Pixel resolution arguments 'dimyx', 'eps', 'xy' were not correctly handled.
    Fixed.
    
        CHANGES IN spatstat.explore VERSION 3.2-5

OVERVIEW

    o Minor corrections in documentation.

        CHANGES IN spatstat.explore VERSION 3.2-4

OVERVIEW

    o Integration of functions.

    o Changed defaults for Clark-Evans Test.

    o spatstat.explore no longer suggests package 'maptools'.
    
    o Minor improvements and bug fixes.

NEW FUNCTIONS

    o integral.fv
    Compute the integral of a function.

SIGNIFICANT USER-VISIBLE CHANGES

    o density.ppp
    New argument 'sameas'.

    o clarkevans.test
    The asymptotic test is now available for any choice of edge correction.

    o clarkevans.test
    New argument 'method' determines whether to use the asymptotic test
    or Monte Carlo test. The default has changed to method='asymptotic'.

    o clarkevans.test
    Default edge correction has changed, to avoid bias.

BUG FIXES

    o kernel.squint
    The return value was incorrect if the argument 'bw' was given.
    Fixed.
    
    o pcf
    The variance approximation was calculated incorrectly
    (due to the bug in kernel.squint).